--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   ],
   "dependencies": {
     "@sanity/vision": "^3.70.0",
+    "easymde": "2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.70.0",
+    "sanity-plugin-markdown": "^5.0.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
